--- a/v1/production/bootstrap-3.3.5/less/normalize.less
+++ b/v1/production/bootstrap-3.3.5/less/normalize.less
@@ -1,4 +1,4 @@
-/*! normalize.css v3.0.3 | MIT License | github.com/necolas/normalize.css */
+/*! normalize.html v3.0.3 | MIT License | github.com/necolas/normalize.html */
 
 //
 // 1. Set default font family to sans-serif.
